<?xml version="1.0"?>
<package format="2">
  <name>rgoap_ros</name>
  <version>0.1.0</version>

  <description>

     ROS adapters for RGOAP, the robotic GOAP implementation.

  </description>

  <maintainer email="juliusz@student.pwr.edu.pl">Juliusz T</maintainer>

  <author>Felix Kolbe</author>
  <license>BSD</license>
  <review status="unreviewed" notes=""/>
  <url>http://ros.org/wiki/rgoap_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rgoap</build_depend>
  <build_depend>rgoap_smach</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_export_depend>rgoap</build_export_depend>
  <build_export_depend>rgoap_smach</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_msgs</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <exec_depend>rgoap</exec_depend>
  <exec_depend>rgoap_smach</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_msgs</exec_depend>
  <exec_depend>smach_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
